Implemented file-based deque data structure.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -127,3 +127,10 @@
   organization={Intel Corporation},
   year={2004}
 }
+@article{bender2002tsa,
+  title={{Two Simplified Algorithms for Maintaining Order in a List}},
+  author={Bender, M.A. and Cole, R. and Demaine, E.D.},
+  journal={Algorithms-ESA 2002: 10th Annual European Symposium, Rome, Italy, September 17-21, 2002: Proceedings},
+  year={2002},
+  publisher={Springer}
+}
