Added paper outline.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -40,10 +40,41 @@ Mathematics and Computer Science}
 
 \keywords{cache efficiency, locality of reference, algorithms}
 
-\section{Introduction}
+% TODO: more meaningful section titles?
 
-%TODO: set up paper structure
-%TODO: borrow as much as possible from the proposal
+\section{Introduction}
+% Copy and shorten introduction from proposal
+% -> Motivate research into cache-efficient algorithms
+% -> Move "classification" subsection describing three models to front
+% -> Describe each of the three models
+% -> Finally, present goal of the research (incorporate "Research Questions" in proposal)
+
+\section{Related Work}
+% Present related work
+
+\section{Use Case}
+% TODO: different name?
+% Describe use case: state search, set data structure.
+% Describe (globally) what to measure: execution time
+
+\section{Research Approach}
+% Describe research approach in detail:
+% - NIPS VM
+% - reimplementation of data structures in C
+% - Subsection: B-tree implementation
+% - Subsection: Hash-table implementation
+% - Subsection: Bender's B-tree implementation
+
+\section{Metrics}
+% Describe how performance was measaured
+% Describe data set used
+
+\section{Results}
+% Present results!
+% Tables, graphs, etc.
+
+\section{Conclusion}
+% Repeat findings.
 
 \bibliographystyle{plain}
 \bibliography{paper}
