Made density parameter of Bender set configurable.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -49,6 +49,11 @@ Mathematics and Computer Science}
 % -> Describe each of the three models
 % -> Finally, present goal of the research (incorporate "Research Questions" in proposal)
 
+% Marielle suggested:
+%  - give the "standard" memory model an explicit name
+%  - move example of cache oblivious data structures to front
+%  - mention examples of cache unaware and cache aware algorithms
+
 \section{Related Work}
 % Present related work
 
