Added some notes to the paper (for my own use).

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -83,12 +83,6 @@
   year={1985}
 }
 
-@misc{oprofile,
-  title={{OProfile}},
-  author={Levon, J. and Elie, P.},
-  note={\url{http://oprofile.sourceforge.net}},
-}
-
 @article{rahman2001opd,
   title={{Optimised Predecessor Data Structures for Internal Memory}},
   author={Rahman, N. and Cole, R. and Raman, R.},
@@ -122,15 +116,34 @@
   year={1976},
   publisher={Springer}
 }
+
 @manual{intel-opt,
   title={{IA-32 Intel Architecture Optimization Reference Manual}},
   organization={Intel Corporation},
   year={2004}
 }
+
 @article{bender2002tsa,
   title={{Two Simplified Algorithms for Maintaining Order in a List}},
   author={Bender, M.A. and Cole, R. and Demaine, E.D.},
   journal={Algorithms-ESA 2002: 10th Annual European Symposium, Rome, Italy, September 17-21, 2002: Proceedings},
   year={2002},
   publisher={Springer}
+}
+
+@misc{oprofile,
+  title={{OProfile}},
+  author={Levon, J. and Elie, P.},
+  note={\url{http://oprofile.sourceforge.net}},
+}
+
+@misc{nipsvm,
+  title={{NIPS VM}},
+  author={Michael Weber},
+  note={\url{http://www3.cs.utwente.nl/~michaelw/nips/}},
+}
+
+@misc{spin,
+  title={{On-the-fly LTL Model Checking With Spin}},
+  note={\url{http://spinroot.com/spin/whatispin.html}},
 }
