--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -54,8 +54,12 @@ Mathematics and Computer Science}
 %  - move example of cache oblivious data structures to front
 %  - mention examples of cache unaware and cache aware algorithms
 
+Text here will be mostly copied from the proposal.
+
 \section{Related Work}
 % Present related work
+
+Text here will be mostly copied from the proposal.
 
 \section{Use Case}
 % TODO: different name?
@@ -65,7 +69,10 @@ Mathematics and Computer Science}
 \section{Research Approach}
 % Describe research approach in detail:
 % - NIPS VM
-% - reimplementation of data structures in C
+% - SPIN model checker
+% - Promela-to-NIPS compiler
+% - Reimplementation of data structures in C
+
 % - Subsection: B-tree implementation
 % - Subsection: Hash-table implementation
 % - Subsection: Bender's B-tree implementation
