Started on the paper contents.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -131,6 +131,30 @@
   publisher={Springer}
 }
 
+@article{weber2007evm,
+  title={{An embeddable virtual machine for state space generation}},
+  author={Weber, M.},
+  journal={Proc. 14th SPIN Workshop, LNCS},
+  volume={4595},
+  pages={168--185},
+  year={2007},
+  publisher={Springer}
+}
+
+@book{kifer2006dsa,
+  title={{Database Systems: An Application-Oriented Approach}},
+  author={Kifer, M. and Bernstein, A. and Lewis, P.M.},
+  year={2006},
+  publisher={Addison-Wesley}
+}
+
+@article{bayer1970oam,
+  title={{Organization and Maintenance of Large Ordered Indices}},
+  author={Bayer, R. and McCreight, E.},
+  year={1970},
+  publisher={DTIC Research Report AD0712079}
+}
+
 @misc{oprofile,
   title={{OProfile}},
   author={Levon, J. and Elie, P.},
@@ -146,4 +170,19 @@
 @misc{spin,
   title={{On-the-fly LTL Model Checking With Spin}},
   note={\url{http://spinroot.com/spin/whatispin.html}},
+}
+
+@misc{noll2004fnv,
+  title={{Fowler/Noll/Vo (FNV) hash}},
+  author={Noll, L.C.},
+  note={\url{http://isthe.com/chongo/tech/comp/fnv/}},
+  year={2004}
+}
+
+@book{sedgewick1998ac,
+  title={{Algorithms in C++}},
+  chapter={{Chapter 14: Hashing}},
+  author={Sedgewick, R.},
+  year={1992},
+  publisher={Addison-Wesley Longman Publishing Co., Inc. Boston, MA, USA}
 }
